alterações 12